--- a/streamada/templates/reset_password_email.html
+++ b/streamada/templates/reset_password_email.html
@@ -10,7 +10,7 @@
       <h2 style="color: whitesmoke;">Hello {{ user.first_name }} {{ user.last_name }},</h2>
       <p style="color: whitesmoke;">It looks like you requested a password reset. To proceed, please click the button below:</p>
       <p>
-        <a href="{{ reset_password_link }}" style="display: inline-block; padding: 12px 25px; margin-top: 20px; font-size: 16px; color: #ffffff; background-color: #28a745; text-decoration: none; border-radius: 5px;">Reset Password</a>
+        <a href="{{ reset_link }}" style="display: inline-block; padding: 12px 25px; margin-top: 20px; font-size: 16px; color: #ffffff; background-color: #28a745; text-decoration: none; border-radius: 5px;">Reset Password</a>
       </p>
 
       <div class="footer" style="margin-top: 30px; font-size: 12px; color: #777777;">
