change the reset_password_emial.html file

--- a/streamada/templates/reset_password_email.html
+++ b/streamada/templates/reset_password_email.html
@@ -8,7 +8,7 @@
       <img src="http://streamada.com/streamada_as_png.png" alt="Streamada Logo" style="width: 100%; height: auto;">
 
       <h2 style="color: whitesmoke;">Hello {{ user.first_name }} {{ user.last_name }},</h2>
-      <p style="color: whitesmoke;">It looks like you requested a password reset. To proceed, please click the button below:</p>
+      <p style="color: whitesmoke;">We received a request to reset your password. If you made this request, please click the button below to proceed.</p>
       <p>
         <a href="{{ reset_link }}" style="display: inline-block; padding: 12px 25px; margin-top: 20px; font-size: 16px; color: #ffffff; background-color: #28a745; text-decoration: none; border-radius: 5px;">Reset Password</a>
       </p>
